Adding wizard logic to default ui

--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -91,14 +91,7 @@ ul.attachments li .attachment-footer {
 }
 
 ul.breadcrumb-stacked {
-    background-color: #FFFFFF;
-    border: 1px solid #DDDDDD;
-    padding: 10px;
-    /*left: 0px;
-    padding: 10px;
-    position: fixed;
-    top: 75px;
-    z-index: 100;*/
+
 }
 
 ul.breadcrumb-stacked li {
@@ -146,8 +139,7 @@ ul.tasks li {
 }
 
 div.crumbs {
-    margin: 0px;
-    padding: 0px;
+    margin-top: 10px;
 }
 
 div.screen-footer {
