--- a/web/src/main/webapp/static/ng/views/process-detail.html
+++ b/web/src/main/webapp/static/ng/views/process-detail.html
@@ -1,10 +1,10 @@
 <ul class="breadcrumb">
-    <li><a href="#">Processes</a></li>
+    <li><a href="./designer/process">Processes</a></li>
     <li class="active">{{process.processDefinitionLabel}}</li>
 </ul>
 <div ng-controller="ProcessEditController" class="panel panel-default">
     <div class="panel-heading">
-        <div class="pull-right" style="line-height:32px"><a href="#/deployment/{{process.processDefinitionKey}}">View deployments</a></div>
+        <div class="pull-right" style="line-height:32px"><a href="./designer/deployment/{{process.processDefinitionKey}}">View deployments</a></div>
         <span class="lead">Process Details</span>
     </div>
     <div class="panel-body">
