--- a/web/src/main/webapp/static/ng/views/form.html
+++ b/web/src/main/webapp/static/ng/views/form.html
@@ -16,15 +16,15 @@
     </div>
     <div collapse="isCollapsed" class="container collapse navbar-collapse navbar-ex1-collapse">
         <div class="row">
-            <div class="col-lg-4 col-sm-4">
-                <button data-ng-click="dialogs.openHistoryModal([form])" class="btn btn-default navbar-btn selected-result-btn" id="history-dialog-button" data-target="#history-dialog" data-backdrop="false" data-toggle="modal" title="History" type="button"><i class="fa fa-calendar-o fa-white"></i></button>
-                <button data-ng-click="dialogs.openSuspendModal([form])" data-ng-show="form.task.active" class="btn btn-default navbar-btn" title="Suspend process" type="button"><i class="fa fa-pause fa-white"></i></button>
-                <button data-ng-click="dialogs.openCancelModal([form])" data-ng-show="form.task.active" class="btn btn-danger navbar-btn incomplete-selected-result-btn" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="fa fa-trash-o"></i></button>
-                <button data-ng-click="dialogs.openActivateModal([form])" data-ng-show="form.task.taskStatus == 'Suspended'" class="btn btn-default navbar-btn" id="activate-dialog-button" data-target="#activate-dialog" data-backdrop="false" data-toggle="modal" title="Activate process" type="button"><i class="fa fa-play"></i></button>
+            <div class="navbar-left">
+                <button data-ng-click="dialogs.openHistoryModal([form])" data-ng-show="form.history" class="btn btn-default navbar-btn selected-result-btn" id="history-dialog-button" title="History" type="button"><i class="fa fa-calendar-o fa-white"></i></button>
+                <button data-ng-click="dialogs.openSuspendModal([form])" data-ng-show="form.history && form.task.active" class="btn btn-default navbar-btn" title="Suspend process" type="button"><i class="fa fa-pause fa-white"></i></button>
+                <button data-ng-click="dialogs.openCancelModal([form])" data-ng-show="form.history && form.task.active" class="btn btn-danger navbar-btn incomplete-selected-result-btn" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="fa fa-trash-o"></i></button>
+                <button data-ng-click="dialogs.openActivateModal([form])" data-ng-show="form.history && form.task.taskStatus == 'Suspended'" class="btn btn-default navbar-btn" id="activate-dialog-button" data-target="#activate-dialog" data-backdrop="false" data-toggle="modal" title="Activate process" type="button"><i class="fa fa-play"></i></button>
             </div>
-            <div class="col-lg-8 col-sm-8">
+            <div class="navbar-right">
                 <div class="responsive-pull-right">
-                    <p data-ng-show="form.task.active && form.task.assignee" class="navbar-text text-primary">Assigned to {{form.task.assignee.displayName}}</p>
+                    <p data-ng-show="form.history && form.task.active && form.task.assignee" class="navbar-text text-primary">Assigned to {{form.task.assignee.displayName}}</p>
                     <button data-ng-hide="!form.task.active || form.task.candidateAssignees" data-ng-click="dialogs.openAssignModal([form])" class="btn btn-default navbar-btn incomplete-selected-result-btn" data-target="#assign-dialog" data-backdrop="false" data-toggle="modal" title="Assign task" type="button"><i class="fa fa-user"></i></button>
                     <div data-ng-show="form.task.active && form.task.candidateAssignees" class="btn-group">
                         <button data-ng-click="dialogs.openAssignModal([form])" class="btn btn-default navbar-btn incomplete-selected-result-btn" id="assign-dialog-button" data-target="#assign-dialog" data-backdrop="false" data-toggle="modal" title="Assign task" type="button"><i class="fa fa-user"></i></button>
@@ -35,16 +35,16 @@
                             <li data-ng-repeat="candidateAssignee in form.task.candidateAssignees"><a class="candidate-assignee" id="{{candidateAssignee.userId}}">Assign to {{candidateAssignee.displayName}}</a></li>
                         </ul>
                     </div>
-                    <a data-ng-click="dialogs.openCommentModal([form])" class="btn btn-default navbar-btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="fa fa-comment-o"></i></a>
+                    <a data-ng-click="dialogs.openCommentModal([form])" data-ng-show="form.history" class="btn btn-default navbar-btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="fa fa-comment-o"></i></a>
                     <div class="btn-group">
-                        <form class="navbar-form navbar-left form-inline" id="fileupload" action="{{form.attachment}}" method="POST" enctype="multipart/form-data" data-file-upload="fileUploadOptions">
+                        <form data-ng-show="form.history" class="navbar-form navbar-left form-inline" id="fileupload" action="{{form.attachment}}" method="POST" enctype="multipart/form-data" data-file-upload="fileUploadOptions">
                             <span class="btn btn-default navbar-btn fileinput-button" data-ng-class="{disabled: disabled}">
                                   <i ng-hide="sending" class="fa fa-paperclip"></i>  <i ng-show="sending" class='fa fa-paperclip fa-spin'></i>
                                   <input type="file" name="attachment" multiple="" ng-disabled="disabled">
                             </span>
                         </form>
                     </div>
-                    <button ng-click="isViewingAttachments = !isViewingAttachments" class="btn btn-default navbar-btn" id="attachments-button" title="View comments and attachments"><i class="fa fa-folder-open"></i>&nbsp;<span id="attachment-count">{{form.attachmentCount}}</span></button>
+                    <button data-ng-click="isViewingAttachments = !isViewingAttachments" data-ng-show="form.history" class="btn btn-default navbar-btn" id="attachments-button" title="View comments and attachments"><i class="fa fa-folder-open"></i>&nbsp;<span id="attachment-count">{{form.attachmentCount}}</span></button>
                     <a class="btn btn-default navbar-btn" href="{{root}}.html" rel="external" id="back-button" title="Return to task list"><i class="fa fa-arrow-left"></i></a>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                 <li data-ng-repeat="notification in notifications" data-ng-bind-html="notification.message"></li>
             </ul>
         </div>
-        <h2>{{form.container.title}}</h2>
+        <h2 ng-show="form.layout == 'normal'">{{form.container.title}}</h2>
         <div data-ng-show="form.container.readonly">
             <div data-ng-show="form.state == 'assigned'" class="alert alert-info">This form cannot be modified - it is assigned to {{form.task.assignee.displayName}}</div>
             <div data-ng-show="form.state == 'completed'" class="alert alert-info">This form can no longer be modified - it was completed by {{form.task.assignee.displayName}} on {{form.task.endTime}}</div>
@@ -67,19 +67,34 @@
             <div data-ng-show="form.state == 'cancelled'"class="alert alert-info">This form can no longer be modified - it has been cancelled</div>
         </div>
         <div class="notifications"></div>
-        <div class="container">
+        <div>
             <form ng-class="isViewingAttachments && 'col-md-8'" class="form form-default" action="{{form.action}}" method="POST" enctype="multipart/form-data">
                 <div class="row">
-                    <div class="crumbs"></div>
-                    <div class="screen" id="{{form.container.containerId}}">
-                        <div class="screen-header"></div>
-                        <div class="screen-content">
+                    <div ng-if="form.layout == 'wizard'" class="crumbs col-md-3">
+                        <ul class="list-group">
+                            <li ng-repeat="step in form.steps" ng-class="form.activeStep == step.ordinal ? 'active' : ''" class="list-group-item">
+                                <a ng-show="step.ordinal <= form.container.activeChildIndex" ng-click="form.activeStep = step.ordinal" class="list-group-item-text">{{step.breadcrumb}}</a>
+                                <span ng-show="step.ordinal > form.container.activeChildIndex">{{step.breadcrumb}}</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="screen" id="{{container.containerId}}">
+                        <div ng-if="form.layout == 'normal'" class="screen-content">
                             <ul data-ng-model="form.container.fields">
                                 <li data-ng-class="field.cssClass" data-ng-repeat="field in form.container.fields" data-ng-include="'/piecework/static/ng/views/field.html'" class="pw-field"></li>
                             </ul>
                         </div>
+                        <div ng-if="form.layout == 'wizard'" class="col-md-9">
+                            <div ng-repeat="step in form.steps" ng-show="form.activeStep == step.ordinal" class="screen-content">
+                                <h2>{{form.container.title}}</h2>
+                                <h4>{{step.title}}</h4>
+                                <ul data-ng-model="step.fields">
+                                    <li data-ng-class="field.cssClass" data-ng-repeat="field in step.fields" data-ng-include="'/piecework/static/ng/views/field.html'" class="pw-field"></li>
+                                </ul>
+                            </div>
+                        </div>
                         <div class="screen-footer">
-                            <div class="pull-right">
+                            <div class="btn-toolbar pull-right" role="toolbar">
                                 <button data-ng-repeat="button in form.container.buttons" data-ng-show="!form.container.readonly" class="btn btn-default" name="{{button.name}}" type="{{button.type}}" value="{{button.value}}">{{button.label}}</button>
                             </div>
                         </div>
