Fixes to allow IE9 to work

--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html data-ng-app="Form">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
-    <base href="/piecework/secure/form"/>
+    <base href="../secure/form.html"/>
 </head>
 </head>
 <body role="application">
@@ -20,7 +20,7 @@
     <div class="navbar-inner">
         <ul>
             <li class="nav"></li>
-            <li class="nav pull-right"><h1 style="font-weight: normal">Workflow&nbsp;&nbsp;</h1></li>
+            <li class="nav pull-right"><h1 style="font-weight: normal;margin-right:20px">Workflow</h1></li>
         </ul>
     </div>
 </div>
