--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -8,7 +8,21 @@
     <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
-    <base href="/piecework/secure/designer"/>
+    <base href="../secure/designer"/>
+    <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
+    <script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-sanitize.min.js"></script>
+    <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
+    <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
+    <script src="../static/js/vendor/ui-sortable.js"></script>
+    <script src="../static/js/vendor/jquery.iframe-transport.js"></script>
+    <script src="../static/js/vendor/jquery.fileupload.js"></script>
+    <script src="../static/js/vendor/jquery.fileupload-process.js"></script>
+    <script src="../static/js/vendor/jquery.fileupload-validate.js"></script>
+    <script src="../static/js/vendor/jquery.fileupload-angular.js"></script>
+    <script src="../static/ng/js/designer.js"></script>
 </head>
 </head>
 <body role="application">
@@ -35,20 +49,5 @@
             </ul>
         </div>
     </div>
-
-    <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
-    <script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-sanitize.min.js"></script>
-    <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
-    <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
-    <script src="../static/js/vendor/ui-sortable.js"></script>
-    <script src="../static/js/vendor/jquery.iframe-transport.js"></script>
-    <script src="../static/js/vendor/jquery.fileupload.js"></script>
-    <script src="../static/js/vendor/jquery.fileupload-process.js"></script>
-    <script src="../static/js/vendor/jquery.fileupload-validate.js"></script>
-    <script src="../static/js/vendor/jquery.fileupload-angular.js"></script>
-    <script src="../static/ng/js/designer.js"></script>
 </body>
 </html>
