--- a/web/src/main/resources/META-INF/piecework/templates/Form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Form.template.html
@@ -8,7 +8,7 @@
     <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
-    <base href="../secure/form"/>
+    <base href="../ui/form"/>
     <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
     <script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular.min.js"></script>
