--- a/web/src/main/webapp/static/ng/views/form.html
+++ b/web/src/main/webapp/static/ng/views/form.html
@@ -113,7 +113,7 @@
     </div>
     <div data-ng-show="form.container.readonly">
         <div data-ng-show="form.state == 'assigned'" class="alert alert-info">This form cannot be modified - it is assigned to {{form.task.assignee.displayName}}</div>
-        <div data-ng-show="form.state == 'completed'" class="alert alert-info">This form can no longer be modified - it was completed by {{form.task.assignee.displayName}} on {{form.task.endTime}}</div>
+        <div data-ng-show="form.state == 'completed'" class="alert alert-info">This form can no longer be modified - it was completed by {{form.task.assignee.displayName}} on {{form.task.endTime|date:'MMM d, y H:mm'}}</div>
         <div data-ng-show="form.state == 'suspended'"class="alert alert-info">This form can no longer be modified - it has been suspended</div>
         <div data-ng-show="form.state == 'cancelled'"class="alert alert-info">This form can no longer be modified - it has been cancelled</div>
     </div>
@@ -235,6 +235,10 @@
         </div>
     </div>
 </nav>
+<div data-ng-show="form.explanation" class="container alert alert-danger">
+    <h4 data-ng-if="form.explanation.message">{{form.explanation.message}}</h4>
+    <p>{{form.explanation.messageDetail}}</p>
+</div>
 <div class="main-content container" data-ng-switch on="form.layout">
     <div class="row" data-ng-switch-when="wizard">
         <div data-ng-include="'multistep.html'"></div>
