--- a/web/src/main/webapp/static/ng/views/comment-modal-dialog.html
+++ b/web/src/main/webapp/static/ng/views/comment-modal-dialog.html
@@ -1,6 +1,12 @@
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-body container">
+            <div ng-show="notifications" class="alert alert-danger">
+                <h4 ng-if="notifications[0].title">{{notifications[0].title}}</h4>
+                <ul>
+                    <li ng-repeat="notification in notifications" ng-bind-html="notification.message"></li>
+                </ul>
+            </div>
             <div class="row">
                 <div class="col-lg-12 col-sm-12">
                     <textarea class="form-control input-block-level" placeholder="Enter a comment" ng-model="comment" id="attach-comment" rows="4"></textarea>
